colocate confirm-decrypt-message page styles
Follows the previously set pattern of colocating styles along side the
consuming components. This one was really straight forward and just a
reorganization of files and imports. No code changes occurred.

--- a/ui/app/pages/index.scss
+++ b/ui/app/pages/index.scss
@@ -4,6 +4,7 @@
 @import 'home/index';
 @import 'send/send';
 @import 'confirm-add-token/index';
+@import 'confirm-decrypt-message/confirm-decrypt-message';
 @import 'connected-sites/index';
 @import 'connected-accounts/index';
 @import 'settings/index';
